code-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: http01-cluster-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: code-server
  namespace: code-server
spec:
  rules:
    - host: code-server.randombits.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 8080
  tls:
  - hosts:
    - code-server.randombits.de
    secretName: code-server-cert
